<resources>
    <string name="app_name">QR Attendance System</string>

    <string name="dashboard">DASHBOARD</string>
    <string name="add_subject">Add Subject</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="scan_code">Scan Code</string>
    <string name="generate_code">Generate Code</string>
    <string name="register_a_subject">Register a subject</string>
    <string name="subject_name">Subject Name :</string>
    <string name="subject_code">Subject Code:</string>
    <string name="course">Course:</string>
    <string name="year_level">Year Level</string>
    <string name="add">Add</string>
    <string name="generate_qr_code">GENERATE QR CODE</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="todo">TODO</string>

    <string-array name="courses">
        <item>BSIT</item>
        <item>BSCS</item>
    </string-array>

    <string-array name="yearLevels">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
    </string-array>



</resources>