<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:orientation="vertical">

    <TextView
        android:id="@+id/addLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_a_subject"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="146dp" />

    <EditText

        android:id="@+id/et_subjectName"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_margin="20sp"
        android:layout_marginEnd="28dp"
        android:background="@color/whitesmoke"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteY="208dp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/subjectNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_marginStart="16dp"
        android:text="@string/subject_name"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="215dp" />

    <TextView
        android:id="@+id/subjectCodeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/subject_code"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/et_subjectCode"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="263dp" />

    <TextView
        android:id="@+id/subjectCourseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_marginStart="48dp"
        android:text="@string/course"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/courses_spinner"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="324dp" />

    <TextView
        android:id="@+id/subjectYearLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_marginStart="64dp"
        android:text="@string/year_level"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/yearlevels_spinner"
        app:layout_constraintStart_toEndOf="@+id/courses_spinner"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="324dp" />

    <EditText
        android:id="@+id/et_subjectCode"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_margin="20sp"
        android:layout_marginEnd="20dp"
        android:background="@color/whitesmoke"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteY="256dp"
        android:autofillHints="" />


    <Spinner
        android:id="@+id/courses_spinner"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:background="@android:drawable/btn_dropdown"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="316dp"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/yearlevels_spinner"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="316dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/insertSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/add"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="397dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
